assets/CSS/style.css
* {
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
    box-sizing: border-box;
    text-decoration: none;
    
}

/* Scrollbar */

body::-webkit-scrollbar {
    width: .5em;
}

body::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
    background-color: #1E1A1D;
}

body::-webkit-scrollbar-thumb {
    background-color: #DC143C;
    border-radius: 10px;
}

/* Fonts */

@font-face {
    font-family: Cattie;
    src: url(../Fonts/Cattie-Regular.ttf);
}

@font-face {
    font-family: the_cat;
    src: url(../Fonts/The\ Cat\ FREE.ttf);
}

@font-face {
    font-family: meowcat;
    src: url(../Fonts/Meowcat.otf);
}

/* core */
body {
    background-image: url(../IMG/backfill.png); 
}

h1 {
    color: #F9DEC9;
    font-family: the_cat;
    font-size: 100px;
}

h2 {
    color: #F9DEC9;
    font-family: the_cat;
}

p {
    font-family: meowcat;
    color: #F9DEC9;
    font-size: 40px;
}

/* Header Detail */

.head {
    transition: 1s;
    background-image: url(../IMG/backround.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    z-index: 1;
    position: relative;
    width: 100%;
    display: block;
    height: auto;
}

.head h1 {
    margin-left: 10%;
    text-align: left;
    color: #F9DEC9;
    font-family: the_cat;
    letter-spacing: 5PX;
    text-shadow: 7.5px 7.5px 10px#0A0011;
    transition: 1s;
}

.head p {
    text-align: left;
    margin-left: 10%;
    margin-top: 15vh;
}

/* Button */

.btn {
    padding: 15px 40px;
    border: none;
    outline: none;
    cursor: pointer;
    position: relative;
    border-radius: 12px;
    z-index: 0;
    margin-left: 10%;
    margin-top: 2vh;
    font-size: 30px;
    font-family: meowcat;
    color: #F9DEC9;
    text-shadow: 7.5px 7.5px 10px#0A0011;
}

.btn::after {
    content: "";
    z-index: -1;
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #1E1A1D;
    left: 0;
    top: 0;
    border-radius: 10px;
    transition: opacity .5s ease;
    opacity: 1;
}

.btn::before {
    content: "";
    background: linear-gradient(
    45deg,
    #DC143C, #1E1A1D, #F9DEC9, #DC143C, #1E1A1D, #F9DEC9,
    #DC143C, #1E1A1D, #F9DEC9, #DC143C, #1E1A1D, #F9DEC9
    );
    position: absolute;
    top: -2px;
    left: -2px;
    background-size: 600%;
    z-index: -1;
    width: calc(100% + 4px);
    height:  calc(100% + 4px);
    filter: blur(8px);
    animation: glowing 30s linear infinite;
    border-radius: 10px;
    opacity: 1;
}

@keyframes glowing {
    0% { background-position: 0 0; }
    50% { background-position: 400% 0; }
    100% { background-position: 0 0; }
}

.btn:hover::after {
    opacity: 0;
    transition: opacity .5s ease;
}

.btn:active {
    font-weight: bold;
}

/* about */
.about {
    background-repeat: no-repeat;
    background-size: cover;
    height: auto;
    background-image: url(../IMG/backround_abt.jpg);
    position: relative;
    width: 100%;
    display: block;
}

.about h1 {
    font-family: the_cat;
    color: #F9DEC9;
    margin-left: 10%;
    text-align: left;
    text-decoration:underline;
    text-shadow: 7.5px 7.5px 10px#0A0011;
    padding-top: 10vh;
}

.about p {
    margin-left: 10%;
    text-align: left;
    padding-top: 5vh;
}

/*  Works */

.works {
    background-repeat: no-repeat;
    background-size: cover;
    background-image: url(../IMG/backround_work.jpg);
    padding: 80px;
    position: relative;
    width: 100%;
    display: block;
    height: auto;
}

.works h1 {
    font-family: the_cat;
    color: #F9DEC9;
    margin-left: 10%;
    text-align: left;
    text-decoration:underline;
    text-shadow: 7.5px 7.5px 10px#0A0011;
    padding-top: 10vh;
}

.works .btn {
    font-size: 20px;
    margin-left: 2.5%
} 

.tabBtns {
    margin-left: 10%;
}

.works p {
    font-size: 20px;
}

.project {
    position: relative;
    width: 280px;
    margin: 0 16px 16px 0;
    margin-right: 5%;
}

.projects_container {
    display: flex;
    flex-wrap: wrap;
    margin-top: 2vh;
    
}

.project_info:hover {
    opacity: 1;
    transition: opacity .5s ease-in-out;
}

.btn_work {
    padding: 5px 5px 5px 5px;
    border: none;
    outline: none;
    cursor: pointer;
    position: relative;
    border-radius: 12px;
    z-index: 0;
    font-size: 30px;
    font-family: meowcat;
    color: #F9DEC9;
    box-shadow: 7.5px 7.5px 10px#0A0011;
    margin-right: 1%;
}

.btn_work::after {
    content: "";
    z-index: -1;
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #1E1A1D;
    left: 0;
    top: 0;
    border-radius: 10px;
    transition: opacity .5s ease;
    opacity: 1;
}

.project {
    width: 20%;
    height: auto;
    background-color: #1E1A1D;
    border-radius: 10px;
    box-shadow: 7.5px 7.5px 10px#0A0011;
    text-align: center;
    
}

.project img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1vh;
    width: 90%;
    border-radius: 10px;
}

.project h2 {
    font-size: 45px;
    text-decoration: underline;
    padding-top: 1vh;
}

.project p {
    padding-bottom: 2vh;
}

@media (max-width:1500px) {
    .project {
        width: 40%;
    }

    .top {
        display: none;
    }
}

@media (min-width:1499px) {
    .bottom {
        display: none;
    }
}

@media (max-width:900px) {
    .project {
        width: 80%;
    }
}

/* Slideshow */
/* Slideshow container */
.mySlides {display: none;}
.slideshow-container {
    max-width: 1000px;
    position: relative;
    margin: auto;
}

.mySlides img {
    border-radius: 10px;
}

/* Caption text */
.text {
    font-size: 25px;
    position: absolute;
    bottom: 8px;
}

/* The dots/bullets/indicators */
.dot {
    height: 7.5px;
    width: 7.5px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.active {
    background-color: #717171;
}

/* Fading animation */
.fade {
    animation-name: fade;
    animation-duration: 3s;
    transition: fade ease-in-out;
}

@keyframes fade {
    from {opacity: .4} 
    to {opacity: 1}
}

/* Socials */
.socials {
    background-repeat: no-repeat;
    background-size: cover;
    height: 100vh;
    background-image: url(../IMG/backround_soc.jpg);
    position: relative;
    padding: 80px;
}

.soc_info {
    float: left;
}

.soc_info h1 {
    font-family: the_cat;
    color: #F9DEC9;
    margin-left: 10%;
    text-align: left;
    text-decoration:underline;
    text-shadow: 7.5px 7.5px 10px#0A0011;
    padding-top: 10vh;
}

.soc_info p {
    margin-left: 10%;
    text-align: left;
    padding-top: 5vh;
}

ul {
    position: relative;
    display: flex;
}

ul li {
    position: relative;
    list-style: none;
    margin: 0 20px;
    cursor: pointer;
}

ul li a {
    text-decoration: none;
}

ul li a .fa-brands {
    font-size: 6em;
    color: #F9DEC9
}

ul li a .fa-solid {
    font-size: 6em;
    color: #F9DEC9
}

ul li a::before {
    font-family: "FontAwesome";
    position: absolute;
    top: 0;
    left: 0;
    font-size: 6em;
    height: 0;
    overflow: hidden;
    transition: 0.5s ease-in-out;
}

ul li:nth-child(1) a::before {
    content: "\f16d";
    background-image: linear-gradient(45deg, 
    #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,
    #bc1888 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    border-bottom: 4px solid #DC143C;
}

ul li:nth-child(2) a::before {
    content: "\f09b";
    color: #333;
    border-bottom: 4px solid #333;
}

ul li:nth-child(3) a::before {
    content: "\e61b";
    color: #000000;
    border-bottom: 4px solid #000000;
}

ul li:nth-child(4) a::before {
    content: "\f08c";
    color: #0e76a8;
    border-bottom: 4px solid #0e76a8;
}

ul li:nth-child(5) a::before {
    content: "\f0e0";
    color: #DC143C;
    border-bottom: 4px solid #DC143C;
}

ul li:hover a::before {
    height: 100%;
}

.soc_view iframe {
    float: right;
    overflow: hidden; 
    box-shadow: 7.5px 7.5px 10px#0A0011;
    height: 700px;
    width: 45%;
}

@media (max-width: 1500px) {
    .soc_view .insta {
        display: none;
    }
}

@media (max-width: 500px) {
    .soc_icons {
        display: block; /* Make the links appear below each other */
        width: 100px;
    }
}

/* Footer */
.footer {
    background-image: url(../IMG/backfill.png);
    position: relative;
    height: auto;
    width: 100%;
    display: block;
}

.footer p {
    text-align: left;
    margin-left: 10%;
}

@media (max-width: 700px) {
    .footer p {
        margin-left: 0;
        text-align: left;
        font-size: 20px;
    }
    p {
        font-size: 25px;
    }
    h1 {
        font-size: 75px;
    }
}

